Fixed extra margin on page button.

--- a/src/Control.css
+++ b/src/Control.css
@@ -2,7 +2,7 @@
     margin-right: 50px;
 }
 
-input, select {
+label.control-element input, label.control-element select {
     margin-left: 10px;
 }
 
